--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -10,3 +10,15 @@
     color: blue;
     font-weight: 400;
 }
+
+.main-button{
+    background-color: goldenrod;
+    width: 150px;
+    height: 30px;
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
